# Workmate-AI

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml
agent_registry/: custom_logger.py  prompts.py  subagents.py
agent_registry/tools/: executor.py  file_tools.py  todo_tools.py
app/: __init__.py  agent.py
app/agent_registry/: __init__.py  agent.py  llms.py  middlewares.py  prompts.py  skills_helper.py  state.py  subagents.py
app/agent_registry/tools/: __init__.py  executor.py  file_tools.py  task_tools.py  todo_tools.py  visualize_tools.py
app/api/controllers/: chat_operations.py  file_operations.py
app/api/routes/: __init__.py
app/utils/: constants.py  custom_logger.py
filesystem-env/: docker-compose.yml  dockerfile
streamlit_app/: api_client.py  app.py  config.py  messages.py  state.py  streaming.py
streamlit_app/components/: chat.py  chat_input.py  file_panel.py  header.py
