[project]
name = "workmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.42.0",
    "uvicorn>=0.49.0",
]
